--- a/about.html
+++ b/about.html
@@ -135,7 +135,7 @@
 									<a href="https://dribbble.com/KananPatel" target="_blank"><i
 											class="icon-dribbble"></i></a>
 								</p>
-								<p><a href="contact.html" class="btn btn-primary btn-outline">View My Works</a></p>
+								<p><a href="work.html" class="btn btn-primary btn-outline">View My Works</a> <a href="javascript:void(0)" class="btn btn-primary btn-outline">Donwload my Resume</a></p>
 							</div>
 						</div>
 					</div>
