--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Noah Template</title>
+	<title>Kanan Patel - UI/UX Designer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -22,7 +22,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -46,8 +46,8 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+		<script src="js/respond.min.js"></script>
+		<![endif]-->
 
 </head>
 
@@ -128,14 +128,17 @@
 								<div class="rotate">
 									<h2 class="heading">About</h2>
 								</div>
-								<p>Hello, I believe that design must solve a need, stir a desire for involvement, and shed light on a path that is enjoyable, trustworthy, and human.</p>
+								<p>Hello, I believe that design must solve a need, stir a desire for involvement, and
+									shed light on a path that is enjoyable, trustworthy, and human.</p>
 								<p class="colorlib-social-icons">
 									<a href="https://www.instagram.com/uiuxjunior/" target="_blank"><i
 											class="icon-instagram2"></i></a>
 									<a href="https://dribbble.com/KananPatel" target="_blank"><i
 											class="icon-dribbble"></i></a>
 								</p>
-								<p><a href="work.html" class="btn btn-primary btn-outline">View My Works</a> <a href="javascript:void(0)" class="btn btn-primary btn-outline">Donwload my Resume</a></p>
+								<p><a href="work.html" class="btn btn-primary btn-outline">View My Works</a> <a
+										href="javascript:void(0)" class="btn btn-primary btn-outline">Donwload my
+										Resume</a></p>
 							</div>
 						</div>
 					</div>
@@ -216,7 +219,7 @@
 				</div>
 			</div>
 		</div>
-<!-- 
+		<!-- 
 		<div id="colorlib-testimony">
 			<div class="container">
 				<div class="row text-center">
@@ -275,7 +278,7 @@
 				</div>
 			</div>
 		</div> -->
-		
+
 		<footer>
 			<div id="footer">
 				<div class="container">
