--- a/contact.html
+++ b/contact.html
@@ -1,55 +1,55 @@
 <!DOCTYPE HTML>
 <html>
 
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Kanan Patel - UI/UX Designer</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<meta name="author" content="" />
-	
-		<!-- Facebook and Twitter integration -->
-		<meta property="og:title" content="" />
-		<meta property="og:image" content="" />
-		<meta property="og:url" content="" />
-		<meta property="og:site_name" content="" />
-		<meta property="og:description" content="" />
-		<meta name="twitter:title" content="" />
-		<meta name="twitter:image" content="" />
-		<meta name="twitter:url" content="" />
-		<meta name="twitter:card" content="" />
-	
-		<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-		<link rel="shortcut icon" href="images/favicon.ico">
-	
-		<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
-	
-		<!-- Animate.css -->
-		<link rel="stylesheet" href="css/animate.css">
-		<!-- Icomoon Icon Fonts-->
-		<link rel="stylesheet" href="css/icomoon.css">
-		<!-- Bootstrap  -->
-		<link rel="stylesheet" href="css/bootstrap.css">
-		<!-- Owl Carousel -->
-		<link rel="stylesheet" href="css/owl.carousel.min.css">
-		<link rel="stylesheet" href="css/owl.theme.default.min.css">
-		<!-- Magnific Popup -->
-		<link rel="stylesheet" href="css/magnific-popup.css">
-	
-		<link rel="stylesheet" href="css/style.css">
-	
-	
-		<!-- Modernizr JS -->
-		<script src="js/modernizr-2.6.2.min.js"></script>
-		<!-- FOR IE9 below -->
-		<!--[if lt IE 9]>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Kanan Patel - UI/UX Designer</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<meta name="author" content="" />
+
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
+	<meta name="twitter:title" content="" />
+	<meta name="twitter:image" content="" />
+	<meta name="twitter:url" content="" />
+	<meta name="twitter:card" content="" />
+
+	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	<link rel="shortcut icon" href="images/favicon.ico">
+
+	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
+
+	<!-- Animate.css -->
+	<link rel="stylesheet" href="css/animate.css">
+	<!-- Icomoon Icon Fonts-->
+	<link rel="stylesheet" href="css/icomoon.css">
+	<!-- Bootstrap  -->
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<!-- Owl Carousel -->
+	<link rel="stylesheet" href="css/owl.carousel.min.css">
+	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+	<!-- Magnific Popup -->
+	<link rel="stylesheet" href="css/magnific-popup.css">
+
+	<link rel="stylesheet" href="css/style.css">
+
+
+	<!-- Modernizr JS -->
+	<script src="js/modernizr-2.6.2.min.js"></script>
+	<!-- FOR IE9 below -->
+	<!--[if lt IE 9]>
 		<script src="js/respond.min.js"></script>
 		<![endif]-->
-	
-	</head>
+
+</head>
 
 <body>
 
@@ -136,11 +136,14 @@
 							<div class="col-md-12 animate-box">
 								<h3>My Address</h3>
 								<ul class="contact-info">
-									<li><span><i class="icon-map5"></i></span>“GURU KRUPA”, B/H Anjali Hospital Desai Vago, Nadiad</li>
+									<li><span><i class="icon-map5"></i></span>“GURU KRUPA”, B/H Anjali Hospital Desai
+										Vago, Nadiad</li>
 									<li><span><i class="icon-phone4"></i></span>(+91) 9023886918</li>
-									<li><span><i class="icon-envelope2"></i></span><a href="mailto:kananpatel.bca@gmail.com">kananpatel.bca@gmail.com</a>
+									<li><span><i class="icon-envelope2"></i></span><a
+											href="mailto:kananpatel.bca@gmail.com">kananpatel.bca@gmail.com</a>
 									</li>
-									<li><span><i class="icon-globe3"></i></span><a href="https://patel-kanan.github.io/" target="_blank">patel-kanan.github.io</a></li>
+									<li><span><i class="icon-globe3"></i></span><a href="https://patel-kanan.github.io/"
+											target="_blank">patel-kanan.github.io</a></li>
 								</ul>
 							</div>
 						</div>
