--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Noah Template</title>
+	<title>Kanan Patel - UI/UX Designer</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -22,7 +22,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="images/favicon.ico">
 
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
@@ -46,8 +46,8 @@
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+		<script src="js/respond.min.js"></script>
+		<![endif]-->
 
 </head>
 
@@ -68,8 +68,8 @@
 				<div class="row">
 					<div class="col-md-12">
 						<ul>
-							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="services.html">Services</a></li>
+							<li><a href="index.html">Home</a></li>
+							<li class="active"><a href="services.html">Services</a></li>
 							<li><a href="work.html">Work</a></li>
 							<li><a href="blog.html">Blog</a></li>
 							<li><a href="about.html">About</a></li>
@@ -104,7 +104,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<div class="colorlib-navbar-brand">
-							<a class="colorlib-logo" href="index.html"><span>No</span><span>ah</span></a>
+							<a class="colorlib-logo" href="index.html"><span>K.</span></a>
 						</div>
 						<a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 					</div>
@@ -134,41 +134,29 @@
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>1 - Graphic Design</h3>
+											<h3>1 - Design</h3>
 											<ul>
+												<li>Wireframing</li>
+												<li>Prototyping</li>
 												<li>UI Design</li>
-												<li>Website &amp; Digital Design</li>
-												<li>Brading &amp; Visual Identity</li>
-												<li>Print Design</li>
+												<li>UX Design</li>
+												<li>Design Principles</li>
 											</ul>
 										</div>
 										<div class="services animate-box">
-											<h3>3 - Front End Development</h3>
+											<h3>3 - Soft Skills</h3>
 											<ul>
-												<li>HTML / CSS</li>
-												<li>JS &amp; Jquery Startup</li>
-												<li>WordPress</li>
-												<li>Jomla</li>
+												<li>Teamwork</li>
+												<li>Communications</li>
 											</ul>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="services animate-box">
-											<h3>2 - Illustration</h3>
+											<h3>2 - Tools</h3>
 											<ul>
-												<li>Editorial</li>
-												<li>Narrative</li>
-												<li>Motion Graphics</li>
-												<li>Animation</li>
-												<li>Visual Effects</li>
-											</ul>
-										</div>
-										<div class="services animate-box">
-											<h3>4 - Web Marketing</h3>
-											<ul>
-												<li>Sales Marketing</li>
-												<li>Invoice</li>
-												<li>eCommerce</li>
+												<li>Figma</li>
+												<li>Adobe XD</li>
 											</ul>
 										</div>
 									</div>
@@ -194,8 +182,8 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-3 col-sm-6 text-center">
-						<h2 class="progress-head">Graphic Design</h2>
+					<div class="col-md-4 col-sm-6 text-center">
+						<h2 class="progress-head">Design</h2>
 						<div class="progress blue">
 							<span class="progress-left">
 								<span class="progress-bar"></span>
@@ -203,39 +191,12 @@
 							<span class="progress-right">
 								<span class="progress-bar"></span>
 							</span>
-							<div class="progress-value">100%</div>
+							<div class="progress-value">95%</div>
 						</div>
 					</div>
-
-					<div class="col-md-3 col-sm-6 text-center">
-						<h2 class="progress-head">Illustration</h2>
-						<div class="progress yellow">
-							<span class="progress-left">
-								<span class="progress-bar"></span>
-							</span>
-							<span class="progress-right">
-								<span class="progress-bar"></span>
-							</span>
-							<div class="progress-value">85%</div>
-						</div>
-					</div>
-
-					<div class="col-md-3 col-sm-6 text-center">
-						<h2 class="progress-head">Front-End Development</h2>
-						<div class="progress pink">
-							<span class="progress-left">
-								<span class="progress-bar"></span>
-							</span>
-							<span class="progress-right">
-								<span class="progress-bar"></span>
-							</span>
-							<div class="progress-value">75%</div>
-						</div>
-					</div>
-
-					<div class="col-md-3 col-sm-6 text-center">
-						<h2 class="progress-head">Web Marketing</h2>
-						<div class="progress green">
+					<div class="col-md-4 col-sm-6 text-center">
+						<h2 class="progress-head">Tools</h2>
+						<div class="progress blue">
 							<span class="progress-left">
 								<span class="progress-bar"></span>
 							</span>
@@ -245,10 +206,22 @@
 							<div class="progress-value">80%</div>
 						</div>
 					</div>
+					<div class="col-md-4 col-sm-6 text-center">
+						<h2 class="progress-head">Soft Skills</h2>
+						<div class="progress blue">
+							<span class="progress-left">
+								<span class="progress-bar"></span>
+							</span>
+							<span class="progress-right">
+								<span class="progress-bar"></span>
+							</span>
+							<div class="progress-value">90%</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-
+<!-- 
 		<div id="colorlib-testimony">
 			<div class="container">
 				<div class="row text-center">
@@ -306,28 +279,29 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
+
 
 		<footer>
 			<div id="footer">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-4 col-pb-sm">
+						<div class="col-md-12 col-pb-sm text-center">
 							<div class="row">
-								<div class="col-md-10">
+								<div class="col-md-12">
 									<h2>Let's Talk</h2>
 									<p>A small river named Duden flows by their place and supplies.</p>
-									<p><a href="#">noah@info.com</a></p>
+									<p><a href="mailto:kananpatel.bca@gmail.com">kananpatel.bca@gmail.com</a></p>
 									<p class="colorlib-social-icons">
-										<a href="#"><i class="icon-facebook4"></i></a>
-										<a href="#"><i class="icon-twitter3"></i></a>
-										<a href="#"><i class="icon-googleplus"></i></a>
-										<a href="#"><i class="icon-dribbble2"></i></a>
+										<a href="https://www.instagram.com/uiuxjunior/" target="_blank"><i
+												class="icon-instagram2"></i></a>
+										<a href="https://dribbble.com/KananPatel" target="_blank"><i
+												class="icon-dribbble"></i></a>
 									</p>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4 col-pb-sm">
+						<!-- <div class="col-md-6 col-pb-sm">
 							<h2>Latest Blog</h2>
 							<div class="f-entry">
 								<a href="#" class="featured-img" style="background-image: url(images/img-1.jpg);"></a>
@@ -350,19 +324,17 @@
 									<h3><a href="#">Road Trip</a></h3>
 								</div>
 							</div>
-						</div>
-						<div class="col-md-4 col-pb-sm">
+						</div> -->
+						<!-- <div class="col-md-4 col-pb-sm">
 							<h2>Newsletter</h2>
-							<p>A small river named Duden flows by their place and supplies it with the necessary
-								regelialia</p>
+							<p>A small river named Duden flows by their place and supplies it with the necessary regelialia</p>
 							<div class="subscribe text-center">
 								<div class="form-group">
-									<input type="text" class="form-control text-center"
-										placeholder="Enter Email address">
+									<input type="text" class="form-control text-center" placeholder="Enter Email address">
 									<input type="submit" value="Subscribe" class="btn btn-primary btn-custom">
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 					<div class="row">
 						<div class="col-md-12 text-center">
@@ -373,7 +345,9 @@
 								<script>document.write(new Date().getFullYear());</script> All rights reserved | This
 								template is made with <i class="icon-heart4" aria-hidden="true"></i> by <a
 									href="https://colorlib.com" target="_blank">Colorlib</a>
-								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+								<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> |
+								Modified By <a href="https://priyank-solanki.github.io" target="_blank">Priyank
+									Solanki</a>
 							</p>
 						</div>
 					</div>
