--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="work.html">Work</a></li>
-							<li><a href="blog.html">Blog</a></li>
+							<!-- <li><a href="blog.html">Blog</a></li> -->
 							<li><a href="about.html">About</a></li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
